# libhri

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  NOTICE  README.md  compile_commands.json  mainpage.dox  package.xml  rosdoc.yaml
examples/: node_show_faces.cpp  show_faces.cpp
hri/: CHANGELOG.rst  CMakeLists.txt  package.xml
hri/include/hri/: body.hpp  face.hpp  feature_tracker.hpp  hri.hpp  person.hpp  types.hpp  voice.hpp
hri/src/: example.cpp
hri/src/hri/: body.cpp  face.cpp  feature_tracker.cpp  hri.cpp  person.cpp  voice.cpp
hri/test/: test_hri.cpp
include/hri/: FeatureTracker.hpp  base.h  body.h  body.hpp  face.h  face.hpp  feature_tracker.hpp  hri.h  hri.hpp  person.h  person.hpp  types.hpp  voice.h  voice.hpp
pyhri/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg
pyhri/hri/: __init__.py  example.py
pyhri/include/ndarray_converter/: ndarray_converter.h
pyhri/include/pyhri/: casts.hpp
pyhri/pyhri/: __init__.py  example.py
pyhri/src/ndarray_converter/: ndarray_converter.cpp
pyhri/src/pyhri/: converters.hpp  ndarray_converter.cpp  ndarray_converter.h  pyhri.cpp
pyhri/test/: test_pyhri.py
src/: body.cpp  example.cpp  face.cpp  hri.cpp  node_show_faces.cpp  person.cpp  voice.cpp
src/hri/: body.cpp  face.cpp  feature_tracker.cpp  hri.cpp  person.cpp  voice.cpp
src/libhri/: body.cpp  face.cpp  hri.cpp  person.cpp  voice.cpp
test/: CMakeLists.txt  hri_unittest.cpp  test_callback.cpp  test_hri.cpp  test_hri.test
