<?xml version="1.0"?>
<package format="2">
  <name>hri</name>
  <version>0.3.1</version>
  <description>A wrapper library around the ROS4HRI ROS topics</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hri</url> -->


  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>rosconsole</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <build_export_depend>roscpp</build_export_depend>

  <export>
      <rosdoc config="rosdoc.yaml" />
  </export>
</package>
