<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri</name>
  <version>0.5.3</version>
  <description>A wrapper library around the ROS4HRI ROS topics</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/hri</url>


  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <rosdoc config="rosdoc.yaml" />
      <build_type>ament_cmake</build_type>
  </export> 


</package>




